@@ -2,6 +2,11 @@ WARNING: Before upgrading MIMEDefang, please search this file for
 *** NOTE INCOMPATIBILITY ** to see if anything has changed that might
 affect your filter.
 
+2023-04-16 Giovanni Bechis <g.bechis@snb.it>
+
+	* add email_is_blacklisted to check an email address against an
+	hashbl rbl server
+
 2023-03-31 Giovanni Bechis <g.bechis@snb.it>
 
 	* UTF-8 support improvements
